New music, level pictures, refactor toast, etc